--- a/4_문자열과_형식_맞춘_입출력/4.5_기호적_상수와_전처리기.md
+++ b/4_문자열과_형식_맞춘_입출력/4.5_기호적_상수와_전처리기.md
@@ -1,5 +1,7 @@
 # 4.5 기호적 상수와 전처리기
-- 기호적 상수의 개념과 장점, 전처리기로 선언하기
+### 기호적 상수의 개념과 장점, 전처리기로 선언하기
+
+## 상수 예제
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/const1.png?raw=true" width="800">
 
