--- a/4_문자열과_형식_맞춘_입출력/4.7_printf()함수의_변환_지정자들.md
+++ b/4_문자열과_형식_맞춘_입출력/4.7_printf()함수의_변환_지정자들.md
@@ -4,7 +4,7 @@
 
 
 
-### Conversion specifier
+### Conversion specifier 기본 형식
 * 자료형을 해석해서 어떻게 출력할지 지정해주는 역할
     - cf) 변환 지정자가 형식 지정자로 여겨짐.
 
@@ -14,12 +14,13 @@
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/printf4.png?raw=true" width="800">
 
+### 예제
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/printf5.png?raw=true" width="800">
 
 * 줄바꿈: `\`
 
 
-#### Overflow와 float 출력
+### Overflow와 float 출력
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/printf6.png?raw=true" width="800">
 
 * overflow
@@ -31,12 +32,12 @@
     - printf 땐 `lf` 붙일 필요 없음, but, scanf에선 double을 받을 때 `lf`를 적절히 사용해주어야 함.
     
 
-#### %g %G
+### %g %G
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/printf7.png?raw=true" width="800">
 
 
-#### 8진수, 16진수, 소수점 자리수, 포인터 표기
+### 8진수, 16진수, 소수점 자리수, 포인터 표기
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/printf8.png?raw=true" width="800">
 
@@ -47,7 +48,7 @@
     - `%.2f`: 소수점 이하 2번째 자리까지
 
 
-#### printf 함수의 return value
+### printf 함수의 return value
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/printf9.png?raw=true" width="800">
 
