--- a/4_문자열과_형식_맞춘_입출력/4.3_문자열이_메모리에_저장되는_구조.md
+++ b/4_문자열과_형식_맞춘_입출력/4.3_문자열이_메모리에_저장되는_구조.md
@@ -13,19 +13,24 @@
 * __주의 사항__
     - __배열: 처음 선언된 것보다 더 큰 인덱스를 선언하면 문제가 생긴다.__
 
-#### 문자의 배열
-* 2가지  초기화 방식
+## 문자의 배열
+### 2가지  초기화 방식
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/string4.png?raw=true" width="800">
 
-* 문자열을 다룰 땐 `\0`이 추가됨.
+* 문자열을 다룰 땐 `\0`(종료문자)이 추가됨.
+    - 종료문자를 만나면 종료
 
+### 배열에 없는 값을 출력하면?
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/string5.png?raw=true" width="800">
 
-* ASCII값 출력, 0을 만나면 끝내버린다.
-* 0이 아니라 쓰레기값이 들어가는 경우도 있다.
+* 있는 값은 ASCII값으로 출력
+* 배열의 없는 값을 출력하면, 0이 아니라 쓰레기값이 들어가는 경우도 있다.
     - Release, Debug 모드 상관없이 모두 0
+
+### 종료문자(null character)
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/string6.png?raw=true" width="800">
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/string7.png?raw=true" width="800">
 
-* 실제 메모리엔 저장이 되어 있지만, printf가 null character를 만나면 종료된다는 것을 알 수 있음.
+* 실제 메모리엔 저장이 되어 있지만, `printf()` 내에서 `%s`로 출력할 땐, __null character__ 이후의 문자는 출력되지 않음.
+* 즉, 문장 중간에 __null character__를 만나면 그 즉시 종료된다는 것을 알 수 있음.
