자잘한 수정

--- a/0_초보_프로그래머를_위한_컴퓨터의_작동원리/0.8_CPU가_일하는_방법.md
+++ b/0_초보_프로그래머를_위한_컴퓨터의_작동원리/0.8_CPU가_일하는_방법.md
@@ -23,24 +23,25 @@
     - __PC__ 는 다음 실행해야 할 명령어의 주소도 가리키게 되어 있음.
     - 즉, `여기서부터 시작하라`는 __시작점__ 을 던져 준 것.
 2. __프로그램 카운터__ 에 있던 주소가 __메모리 주소 레지스터__ 로 간다. 
-3. __메모리 주소 레지스터__ 에 있던 주소에 접근하여(LOAD 10), __메모리 데이터 레지스터__ 로 이동함. 제어장치가 제어함,
+3. __메모리 주소 레지스터__ 에 있던 주소에 접근하여(LOAD 10), __메모리 데이터 레지스터__ 로 이동함. __제어장치__ 가 제어함,
 4. PC에 의해 가져온, __메모리 데이터 레지스터__ 가 읽어온 것은 __instruction__ 이기에, __명령어 레지스터__ 로 이동(LOAD 10)
 5. `'주의'` __프로그램 카운터 증가 (100 -> 101)__ , 증가 이유: 다음 읽어와야 하는 메모리 주소를 갖고 있어야 하기 때문.
 6. __명령어 레지스터__ 에 있는 __instruction__ 이 __제어 장치__ 에 들어간다. (decode)
 7. `10번지에 있는 데이터를 LOAD해라` 해독. => __메모리주소 레지스터__ 에 `10`을 넣는다.
 8. `10번지`에 있는 데이터를 __메모리 데이터 레지스터__ 로 갖고 온다.
-9. 아까는 __메모리 데이터 레지스터__ 에 있는 것이 __명령어__ 였기에, __명령어 레지스터__ 로 향했지만, 지금은 데이터기에 __어큐뮬레이터(이 역시 하나의 래지스터)__ 로 향함 
+9. 아까는 __메모리 데이터 레지스터__ 에 있는 것이 __명령어__ 였기에, __명령어 레지스터__ 로 향했지만, 지금은 데이터기에 __어큐뮬레이터(이 역시 하나의 레지스터)__ 로 향함 
 10. `LOAD 10`이라는 __instruction__  끝남. => 다음 줄 실행해야 함. => 프로그램 카운터에 있는 주소를 가져옴 
 11. __다음 줄(101)에 있는 명렁어__ 를 갖고 옴. (__메모리 데이터 레지스터__) 
-12. __프로그램 키운터__ 로 향함.
+12. __프로그램 카운터__ 로 향함.
 13. __명령어 레지스터__: 해독함. (`ADD 11`): `11번지 주소에 있는 데이터를 더해라`
 14. `ADD`를 하기 위해, 즉, `미리 읽어둔 숫자에 11을 더하기` 위해, __어큐뮬레이터__ 에 3을 옮김.
 15. `11`을 __메모리 주소__ 로 옮김
 16. `11 메모리 주소`로부터 데이터(4)를 갖고 옴.
-17. __어큐뮬레이터__ 로 향함. // 어큐뮬레이터: 산술작업에 쓰일 데이터가 저장되는 레지스터
+17. __어큐뮬레이터__ 로 향함. 
+    - 어큐뮬레이터: 산술작업에 쓰일 데이터가 저장되는 레지스터
 18. __산술 논리 장치__ 에서 연산 => `3 + 4 = 7`
 19. 계산 결과가 __어큐뮬레이터__ 에 저장됨.
-20. __프로그램 카운터__ 가 다음 __instruction을 실행하기__  위해 __프로그램 카운터__의 주소가 __메모리 주소 레지스터__ 로 들어감
+20. __프로그램 카운터__ 가 다음 __instruction을 실행하기__  위해 __프로그램 카운터__ 의 주소가 __메모리 주소 레지스터__ 로 들어감
 21. 102번지의 데이터(`STORE 12`)가 __메모리 데이터 레지스터__ 로 들어오고,
 22. 명령어이기 때문에 __명령어 레지스터__ 로 들어간다
 23. __프로그램 카운터__ 증가
