--- a/3_데이터와_C언어/3.6_정수의_오버플로우.md
+++ b/3_데이터와_C언어/3.6_정수의_오버플로우.md
@@ -17,9 +17,9 @@
     - <limits.h> 파일엔 정수 자료형의 최솟값과 최댓값이 정의되어 있음.
     <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter3/data9.png?raw=true" width="800">
 
-    [이미지 출처: C언어 도장깨기](https://dojang.io/mod/page/view.php?id=34)
+[이미지 출처: C언어 도장깨기](https://dojang.io/mod/page/view.php?id=34)
     
-    - signed, unsigned 범위가 다르다. 
+* signed, unsigned 범위가 다르다. 
 
 * 오버플로우
     - 자료형의 가능한 최댓값보다 더 큰 수를 출력하려면?
@@ -28,4 +28,4 @@
 
  <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter3/data10.png?raw=true" width="800">
 
-    [이미지 출처: C언어 도장깨기](https://dojang.io/mod/page/view.php?id=32)
+[이미지 출처: C언어 도장깨기](https://dojang.io/mod/page/view.php?id=32)
