--- a/3_데이터와_C언어/3.5_정수와_실수.md
+++ b/3_데이터와_C언어/3.5_정수와_실수.md
@@ -11,7 +11,7 @@
 - 내부적으로 '부동 소수점' 표현법 사용
     - 0.314E1 = 0.314 * 10¹
     - 3.14E123 = 3.14 * 10¹²³
-- 3.14 = 3.14E0 = 3.14e0 = 0.314E1 = 31.4E-1
+- 3.14 = 3.14E0 = 3.14e0 = 0.314E1 = 31.4E-1 // e의 0승, e의 1승, e의 -1승ㄷ
     - 소수점이 둥둥 떠다닌다
 
 - 내부적으로 2진수
@@ -33,7 +33,7 @@
 ## precision(정밀도)(?)
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter3/data8.png?raw=true" width="800">
 
-- sign, exponent, fraction으로 나뉨.
+- sign, exponent(지수), fraction(분수)으로 나뉨.
 - 맨 앞 비트에 sign
 - 32bit가 single, 64bit가 double
 - float는 뒤에 f 붙음.
