이미지 경로 수정 및 정렬

--- a/6_반복문/6.15_중첩된_루프들.md
+++ b/6_반복문/6.15_중첩된_루프들.md
@@ -2,104 +2,109 @@
 
 ## 예제 1
 
-while8
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/while8.png?raw=true">
 
 ### Mine
-			char firstChar = 'A';
-			char lastChar = 'K';
-			int row = 5;
-			int i = 0;
-			for (i = 0; i < row; ++i) {
-				for (firstChar; firstChar <= lastChar; ++firstChar) {
-					printf("%c ", firstChar);
-				} printf("\n");
-				firstChar1 = 'A';
-			}
+
+    		char firstChar = 'A';
+    		char lastChar = 'K';
+    		int row = 5;
+    		int i = 0;
+    		for (i = 0; i < row; ++i) {
+    			for (firstChar; firstChar <= lastChar; ++firstChar) {
+    				printf("%c ", firstChar);
+    			} printf("\n");
+    			firstChar1 = 'A';
+    		}
+
 ### prof.
-			const int row = 5;
-			const char firstChar = 'A';
-			const char lastChar = 'K';
 
-			int r;
-			int c;
+    		const int row = 5;
+    		const char firstChar = 'A';
+    		const char lastChar = 'K';
 
-			for (r = 0; r < row; ++r)
-			{
-				for (c = firstChar; c <= lastChar; ++c) {
-					printf("%c ", c);
-				printf("\n");
-			}
+    		int r;
+    		int c;
+
+    		for (r = 0; r < row; ++r)
+    		{
+    			for (c = firstChar; c <= lastChar; ++c) {
+    				printf("%c ", c);
+    			printf("\n");
+    		}
 
 ## 예제 2
 
-while9
-
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/while9.png?raw=true">
 
 ### Mine
 
-			int headNum = 'A';
-			int tailNum = 'J';
+    		int headNum = 'A';
+    		int tailNum = 'J';
 
-			int rows = 10;
-			int i, j = 0;
+    		int rows = 10;
+    		int i, j = 0;
 
-			for (i = 0; i < rows; ++i) {
-				for (j = headNum; j <= headNum + i; j++) {
-					printf("%c ", j);
-				} printf("\n");
-			}
+    		for (i = 0; i < rows; ++i) {
+    			for (j = headNum; j <= headNum + i; j++) {
+    				printf("%c ", j);
+    			} printf("\n");
+    		}
 
 ### prof.
-* 핵심코드
-			#define NUM_ROWS 10
-			#define FIRST_CHAR 'A'
+
+- 핵심코드
+  #define NUM_ROWS 10
+  #define FIRST_CHAR 'A'
 
 
-			int r; // row loop
-			int c; // character loop
+    		int r; // row loop
+    		int c; // character loop
 
-			for (r = 0; r < NUM_ROWS; ++r)
-			{
-				for (c = FIRST_CHAR; c <= FIRST_CHAR + r; ++c)
-					printf("%c ", c);
-				printf("\n");
-			}
+    		for (r = 0; r < NUM_ROWS; ++r)
+    		{
+    			for (c = FIRST_CHAR; c <= FIRST_CHAR + r; ++c)
+    				printf("%c ", c);
+    			printf("\n");
+    		}
 
 ## 예제 3
-while10
+
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/while10.png?raw=true">
 
 ### Mine
 
-			int headChar = 'A';
-			int tailChar = 'L';
+    		int headChar = 'A';
+    		int tailChar = 'L';
 
-			int rows = 12;
-			int i, j = 0;
+    		int rows = 12;
+    		int i, j = 0;
 
-			for (i = 0; i < rows; ++i, ++headChar) {
-				for (j = headChar; j < tailChar; ++j) {
-					printf("%c ", j);
-				}	
-				printf("\n");
-			}
+    		for (i = 0; i < rows; ++i, ++headChar) {
+    			for (j = headChar; j < tailChar; ++j) {
+    				printf("%c ", j);
+    			}
+    			printf("\n");
+    		}
 
 ### prof.
-* 핵심코드
 
-			#define NUM_ROWS 12
-			#define FIRST_CHAR 'A'
-			#define LAST_CHAR 'K'
+- 핵심코드
+
+      			#define NUM_ROWS 12
+      			#define FIRST_CHAR 'A'
+      			#define LAST_CHAR 'K'
 
 
-			const char last_char = 'L';
-			const int num_row = last_char - FIRST_CHAR + 1;
+    		const char last_char = 'L';
+    		const int num_row = last_char - FIRST_CHAR + 1;
 
-			int r; // row loop
-			int c; // character loop
+    		int r; // row loop
+    		int c; // character loop
 
-			for (r = 0; r < num_row; ++r)
-			{
-				for (c = FIRST_CHAR + r; c < FIRST_CHAR + num_rows; ++c)
-					printf("%c ", c);
-				printf("\n");
-			}
+    		for (r = 0; r < num_row; ++r)
+    		{
+    			for (c = FIRST_CHAR + r; c < FIRST_CHAR + num_rows; ++c)
+    				printf("%c ", c);
+    			printf("\n");
+    		}
