--- a/6_반복문/6.17_for_루프를_배열과_함께_사용하기.md
+++ b/6_반복문/6.17_for_루프를_배열과_함께_사용하기.md
@@ -21,23 +21,22 @@ int array[SIZE];
 
 // prepare for array data
 for (int i = 0; i < SIZE; ++i)
-    array[i] = i;
+array[i] = i;
 
 // print array data
 for (int i = 0; i < SIZE; ++i)
-    printf("%d ", array[i]);
+printf("%d ", array[i]);
 
-
-[array2]
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/array2.png?raw=true">
 
 1열로 나열된 메모리를 두고, 메모리 한 칸 한 칸 돌면서 어떠한 작업을 하는 것이 컴퓨터와 많은 데이터를 처리하는 중요한 원리 중 하나.
 
-
 ## 연습문제
 
-[array3]
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/array3.png?raw=true">
 
 ### mine
+
             #include <stdio.h>
 
             #define SIZE 5
@@ -49,7 +48,7 @@ for (int i = 0; i < SIZE; ++i)
                 int sum = 0;
 
                 printf("Enter %d numbers : ", SIZE);
-                
+
                 for (i = 0; i < SIZE; i++) {
                     scanf("%d", &arr[i]);
                 }
@@ -59,7 +58,6 @@ for (int i = 0; i < SIZE; ++i)
                 }
 
                 printf("Sum = %d\n", sum);
-                
+
                 return 0;
             }
-
