--- a/7_분기문/7.4_다중_선택_else_if.md
+++ b/7_분기문/7.4_다중_선택_else_if.md
@@ -1,9 +1,11 @@
 # 7.4 다중 선택 else if
 
 ## 예제: 종합소득세
-* 과세 표준 등급 별로 세율이 다름.
+
+- 과세 표준 등급 별로 세율이 다름.
 
 ## 실습
+
             #define _CRT_SECURE_NO_WARNINGS
             #include <stdio.h>
             // assessment standard tax base
@@ -32,7 +34,7 @@
                 scanf("%lf", &income);
 
                 income -= BASIC_DEDUCTION;
-                
+
                 if (income <= BASE1)
                 {
                     tax = income * RATE1;
