--- a/7_분기문/7.6_소수_판단_예제.md
+++ b/7_분기문/7.6_소수_판단_예제.md
@@ -2,10 +2,11 @@
 
 ## 예제 1
 
-### Mine            
+### Mine
+
                 unsigned num, i;
                 int isPrime = 0; // flag, try bool type
-                
+
                 printf("숫자를 입력하세요: ");
                 scanf("%u", &num);
 
@@ -23,9 +24,10 @@
                     printf("%u is not a prime number\n", num);
 
 ### Ans
+
                 unsigned num, div;
                 bool isPrime = 0; //bool type
-                
+
                 scanf("%u", &num);
                 isPrime = true;
 
@@ -42,29 +44,28 @@
 ## 예제 2: 모든 약수 찾기
 
     unsigned num, div;
-	int isPrime = 1; // flag, try bool type
-	
-	printf("숫자를 입력하세요: ");
-	scanf("%u", &num);
+    int isPrime = 1; // flag, try bool type
 
-	for (div = 2; (div * div) <= num; ++div) {
-		if ((num % div) == 0)
-		{
-			isPrime = 0;
-			
-			if (num == div * div)
-				printf("%u is divisible by %u.\n", num, div);
-			else {
-				printf("%u is divisible by %u and %u.\n", num, div, num / div);
-			}
-		}	
-	}
+    printf("숫자를 입력하세요: ");
+    scanf("%u", &num);
 
-	if (isPrime == 1)
-		printf("%u is a prime number.\n", num);
-	else
-		printf("%u is not a prime number\n", num);
+    for (div = 2; (div * div) <= num; ++div) {
+    	if ((num % div) == 0)
+    	{
+    		isPrime = 0;
 
+    		if (num == div * div)
+    			printf("%u is divisible by %u.\n", num, div);
+    		else {
+    			printf("%u is divisible by %u and %u.\n", num, div, num / div);
+    		}
+    	}
+    }
 
-* Bool type을 쓰기 위해선 `#include <stdbool.h>`를 하고, `isPrime`을 `bool isPrime`으로 바꿀 것.
-    - true는 1, false는 0
+    if (isPrime == 1)
+    	printf("%u is a prime number.\n", num);
+    else
+    	printf("%u is not a prime number\n", num);
+
+- Bool type을 쓰기 위해선 `#include <stdbool.h>`를 하고, `isPrime`을 `bool isPrime`으로 바꿀 것.
+  - true는 1, false는 0
