--- a/7_분기문/7.9_조건_연산자.md
+++ b/7_분기문/7.9_조건_연산자.md
@@ -12,9 +12,9 @@
                 printf("%d\n", temp);
             }
 
-* `?` 왼쪽의 값이 __true__ 일 경우, `?` 다음의 값(2번째 항의 값)이 들어가고, __false__ 일 경우, 마지막 값(3번째 항의 값)이 들어감.
+- `?` 왼쪽의 값이 **true** 일 경우, `?` 다음의 값(2번째 항의 값)이 들어가고, **false** 일 경우, 마지막 값(3번째 항의 값)이 들어감.
 
-* 이전엔 삼항 연산자라 부르기도 하였으나, 조건 연산자라 함이 더 바람직함.
+- 이전엔 삼항 연산자라 부르기도 하였으나, 조건 연산자라 함이 더 바람직함.
 
 # 예시 2
 
@@ -46,12 +46,13 @@
 
                 return 0;
             }
-#  예시 3: 선언과 동시에 연산
+
+# 예시 3: 선언과 동시에 연산
 
             int a = 1, b = 2;
             int max = (a > b) ? a : b;
 
-# 예시 4:  예시 2 한 줄로 줄이기
+# 예시 4: 예시 2 한 줄로 줄이기
 
             int main()
             {
@@ -64,4 +65,4 @@
                 return 0;
             }
 
-* flag 삭제도 가능하나 그렇게까지 사용하진 않음.
+- flag 삭제도 가능하나 그렇게까지 사용하진 않음.
