--- a/7_분기문/7.2_표준_입출력_함수들_getchar()_putchar()_예제.md
+++ b/7_분기문/7.2_표준_입출력_함수들_getchar()_putchar()_예제.md
@@ -1,19 +1,18 @@
 # 7.2 표준 입출력 함수들 getchar() putchar() 예제
-* 한 글자 씩 입력 받고, 한 글자 씩 출력하는 함수
 
-
+- 한 글자 씩 입력 받고, 한 글자 씩 출력하는 함수
 
 ## 예제
-	
+
             1. Introduce getchar(), putchar()
             2. Use while loop to process character sequences
             3. Filter a specific character
             4. Convert numbers to asterisks
             5. Lower characters to Upper characters
-	
-	
+
 ### 예제 1: Introduce getchar(), putchar()
-* 특징 1: int로 받아간다 - 정수 입력을 하면 ASCII 코드로 출력해준다.
+
+- 특징 1: int로 받아간다 - 정수 입력을 하면 ASCII 코드로 출력해준다.
 
             char ch;
 
@@ -26,6 +25,7 @@
             putchar(ch);
 
 ### 예제 2: 문자열 Use while loop to process character sequences
+
             char ch;
 
             ch = getchar();
@@ -40,13 +40,13 @@
 
             putchar(ch);
 
-* __주의사항__: 내부적 작동 방식
-    - 원래 한 글자 입력하면 바로 출력 받아야 하는데 그렇지 않다.
-    
-    - 실제로는 왕창 여러 글자 받음. 
-    - 입력 끝났다는 의미로 enter를 누르면
-        - 버퍼라는 공간에 데이터가 쭉 들어가고,
-        - 아래 while 루프를 돌 때마다 한 개 씩 빼오는 것. 
+- **주의사항**: 내부적 작동 방식
+  - 원래 한 글자 입력하면 바로 출력 받아야 하는데 그렇지 않다.
+
+  - 실제로는 왕창 여러 글자 받음.
+  - 입력 끝났다는 의미로 enter를 누르면
+    - 버퍼라는 공간에 데이터가 쭉 들어가고,
+    - 아래 while 루프를 돌 때마다 한 개 씩 빼오는 것.
 
 ### 예제 2: 코드 최적화
 
@@ -63,7 +63,8 @@
             putchar(ch);
 
 ### 예제 3: 필터링 Filter a specific character
-* 특정 단어를 걸러내거나 조건을 걸어주기.
+
+- 특정 단어를 걸러내거나 조건을 걸어주기.
 
             char ch;
 
@@ -77,9 +78,10 @@
 
             putchar(ch);
 
-### 예제 4: 숫자를 별(*)로 바꾸기 Convert numbers to asterisks
+### 예제 4: 숫자를 별(\*)로 바꾸기 Convert numbers to asterisks
 
 #### for문 사용
+
             char ch;
 
             while ((ch = getchar()) != '\n')
@@ -95,6 +97,7 @@
             putchar(ch);
 
 #### 비교 연산자
+
             char ch;
 
             while ((ch = getchar()) != '\n')
@@ -104,22 +107,23 @@
 
                 putchar(ch);
             }
-            
+
             putchar(ch);
 
-* 효율성: 후자가 더 낫다.
+- 효율성: 후자가 더 낫다.
 
 ### 예제 5: 소문자를 대문자로, 대문자를 소문자로 바꾸기 Lower characters to Upper characters
+
             char ch;
 
             while ((ch = getchar()) != '\n')
             {
-                if (ch >= 'a' && ch <= 'z') 
+                if (ch >= 'a' && ch <= 'z')
                     ch -= 'a' - 'A'; // 32
-                else if (ch >= 'A' && ch <= 'Z') 
+                else if (ch >= 'A' && ch <= 'Z')
                     ch += 'a' - 'A'; // 32
-                    
+
                 putchar(ch);
             }
-            
+
             putchar(ch);
