--- a/0_초보_프로그래머를_위한_컴퓨터의_작동원리/0.10_이진수.md
+++ b/0_초보_프로그래머를_위한_컴퓨터의_작동원리/0.10_이진수.md
@@ -18,7 +18,7 @@
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter0/comp23.png?raw=true">
 
 * 10진수를 이용하더라도 내부에선 2진수로 변환하여 사용하고, 출력 때 10진수로 출력되는 것일 뿐.
-    - 물론 출력 떄도 2진수로 볼 수도 있음.
+    - 물론 출력 때도 2진수로 볼 수도 있음.
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter0/comp24.png?raw=true">
 
