--- a/0_초보_프로그래머를_위한_컴퓨터의_작동원리/0.7_CPU의_기본_구조.md
+++ b/0_초보_프로그래머를_위한_컴퓨터의_작동원리/0.7_CPU의_기본_구조.md
@@ -7,7 +7,7 @@
 1. 만들어진 프로그램은 보조기억장치에 저장된다.
     - 실행시키고 싶다면 운영체제에 부탁.
 2. 보조기억장치에 있는 명령을 주기억장치에 옮긴다.
-    - CPU는 주기억장치와만 통신할 수 있기 떄문
+    - CPU는 주기억장치와만 통신할 수 있기 때문
     - 한 줄 한 줄 실행해나간다.
 3. ...
 
