--- a/6_반복문/6.11_콤마_연산자.md
+++ b/6_반복문/6.11_콤마_연산자.md
@@ -1,14 +1,14 @@
 # 6.11 콤마 연산자
 * 콤마도 하나의 연산자
 
-for (int n = 1, nsqr = n * n; n < 10; n++, nsqr = n * n)
-    - 콤마는 for문에서 유연하게 사용할 수 있음.
-    - 업데이트에서 2가지 기능 수행
+`for (int n = 1, nsqr = n * n; n < 10; n++, nsqr = n * n)`
+- 콤마는 for문에서 유연하게 사용할 수 있음.
+- 업데이트에서 2가지 기능 수행
 
-int i, j;
-i = 1;
-i++, j = 1; // comma는 sequence point
-printf("%d %d\n", i, j); // 2, 2
+            int i, j;
+            i = 1;
+            i++, j = 1; // comma는 sequence point
+            printf("%d %d\n", i, j); // 2, 2
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/comma1.png?raw=true">
 
