--- a/6_반복문/6.12_제논의_역설_시뮬레이션_예제.md
+++ b/6_반복문/6.12_제논의_역설_시뮬레이션_예제.md
@@ -1,6 +1,6 @@
 # 6.12 제논의 역설 시뮬레이션 예제
 
-## [제논의 역설](https://terms.naver.com/entry.nhn?docId=3566968&cid=58944&categoryId=58970)을 그대로 코드로 구현하기
+* [제논의 역설](https://terms.naver.com/entry.nhn?docId=3566968&cid=58944&categoryId=58970)을 그대로 코드로 구현하기
 
 
 ## 시간과 거리의 관계
