--- a/6_반복문/6.17_for_루프를_배열과_함께_사용하기.md
+++ b/6_반복문/6.17_for_루프를_배열과_함께_사용하기.md
@@ -4,32 +4,32 @@
 
 ### 핵심 코드
 
-#define SIZE 5
-...
+            #define SIZE 5
+            ...
 
-int i1 = 0;
-int i2 = 1;
-int i3 = 2;
-// ...
+            int i1 = 0;
+            int i2 = 1;
+            int i3 = 2;
+            // ...
 
-printf("%d\n", i1);
-printf("%d\n", i2);
-printf("%d\n", i3);
-// ...
+            printf("%d\n", i1);
+            printf("%d\n", i2);
+            printf("%d\n", i3);
+            // ...
 
-int array[SIZE];
+            int array[SIZE];
 
-// prepare for array data
-for (int i = 0; i < SIZE; ++i)
-array[i] = i;
+            // prepare for array data
+            for (int i = 0; i < SIZE; ++i)
+            array[i] = i;
 
-// print array data
-for (int i = 0; i < SIZE; ++i)
-printf("%d ", array[i]);
+            // print array data
+            for (int i = 0; i < SIZE; ++i)
+            printf("%d ", array[i]);
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/array2.png?raw=true">
 
-1열로 나열된 메모리를 두고, 메모리 한 칸 한 칸 돌면서 어떠한 작업을 하는 것이 컴퓨터와 많은 데이터를 처리하는 중요한 원리 중 하나.
+* 1열로 나열된 메모리를 두고, 메모리 한 칸 한 칸 돌면서 어떠한 작업을 하는 것이 컴퓨터와 많은 데이터를 처리하는 중요한 원리 중 하나.
 
 ## 연습문제
 
