--- a/6_반복문/6.3_진입조건_루프_while.md
+++ b/6_반복문/6.3_진입조건_루프_while.md
@@ -55,7 +55,7 @@
             while (i++ < 3); // null statement
                 printf("%i\n", i);
 
-            - ';'으로 인해 while문이 이미 끝난 것으로 파악되기 떄문에 printf가 실행되지 않는 오류.
+            - ';'으로 인해 while문이 이미 끝난 것으로 파악되기 때문에 printf가 실행되지 않는 오류.
 
             [실수 3?]
             while (scanf("%d", &i) == 1)
