--- a/7_분기문/7.8_단어_세기_예제.md
+++ b/7_분기문/7.8_단어_세기_예제.md
@@ -4,7 +4,7 @@
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter7/if5.png?raw=true">
 
 ## Mine
-*  __줄 바꿈__ 을 할 떄 문장이 끝나는 구조.
+*  __줄 바꿈__ 을 할 때 문장이 끝나는 구조.
 
             #define _CRT_SECURE_NO_WARNINGS
             #include <stdio.h>
