--- a/2_C언어를_소개합니다/2.4_자료형이_필요한_이유.md
+++ b/2_C언어를_소개합니다/2.4_자료형이_필요한_이유.md
@@ -5,7 +5,7 @@
 * 변수의 자료가 어떤 형태일지 먼저 정해주는 것: 자료형
 
 * 필요성
-    - CPU는 데이터를 0101 이진수 덩어리로 가져오는 것이기 떄문에, 실수 정수 구분을 하지 못함.
+    - CPU는 데이터를 0101 이진수 덩어리로 가져오는 것이기 때문에, 실수 정수 구분을 하지 못함.
         - 미리 구분해주어야 함
     - 숫자의 범위에 따라 메모리를 다르게 쓰기 때문에.
         - 자료형에 따라 메모리 사이즈도 차이가 난다.
