--- a/6_반복문/6.16_배열과_런타임_에러.md
+++ b/6_반복문/6.16_배열과_런타임_에러.md
@@ -4,21 +4,25 @@
 
 ## Array 기본 예시
 
-array1
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/array1.png?raw=true">
 
-일반적인 선언과 비교.
-배열의 편리성은 값을 할당하는 방식 등에서 살펴볼 수 있음.
-첨자를 통해 값에 접근
 
-[i], i는 offset: 메모리가 쭉 할당되어 있는데, 얼마나 떨어져 있는가.
+* 일반적인 선언과 비교.
+    - 배열의 편리성은 값을 할당하는 방식 등에서 살펴볼 수 있음.
+    - 첨자를 통해 값에 접근
 
-array[0]은 array의 첫 번째 주소에 대응한다.
-`scanf("%d", &my_numbers[0]) == scanf("%d", my_numbers);
+* `[i]`
+    - `i`는 offset
+        - 메모리가 쭉 할당되어 있는데, 얼마나 떨어져 있는가.
+
+* `array[0]`은 array의 첫 번째 주소에 대응한다.
+    - `scanf("%d", &my_numbers[0]) == scanf("%d", my_numbers);`
 
 ## Runtime Error
 
 * 선언하지 않은 공간에 값을 선언.
-    - 예시)
+    - 예시)   
+    
             int array[5];
             array[5] = 5; // out of bound
     - compile할 땐 체크되지 않음.
