--- a/15_비트_다루기/15.12_메모리_줄맞춤_alignof_alignas.md
+++ b/15_비트_다루기/15.12_메모리_줄맞춤_alignof_alignas.md
@@ -61,6 +61,6 @@
 
 * `char __Alignas(16) cz;`, `printf("&cz : %p %lld\n", &cz, (long long)&cz % 16);`을 하면?
 
-<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter15/bit22png?raw=true">
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter15/bit22.png?raw=true">
 
 
