--- a/04_문자열과_형식_맞춘_입출력/4.10_scanf()함수의_사용법.md
+++ b/04_문자열과_형식_맞춘_입출력/4.10_scanf()함수의_사용법.md
@@ -57,10 +57,15 @@
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/scanf12.png?raw=true" width="800">
 
-* 숫자를 읽어들이라 문자를 만나면 종료됨.
+* 숫자를 읽어들이다가, 문자를 만나면 종료됨.
 * 123ab456 => 123
 
 ### 예제 8: j modifier
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/scanf20.png?raw=true" width="800">
+
+* intmax_t i; 가장 큰 정수형 타입 portable (`<inttypes.h>`)
+* 해당하는 서식자: `j` 추가
+* 나머지 사용법은 모두 동일.
 
 ### 예제 9: Regular characters
 * cf) 정규식: 문자열을 입력받을 때 규칙이 있다
@@ -92,9 +97,12 @@
 
 * 너비를 출력할 때 width를 그때 그때 바꿀 수 있다는 유연성에 장점이 있음.
 
+* *자리에 들어갈 width를 직접 입력한다는 특징.
+
 ### 예제 13: modifier for scanf()
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter4/scanf19.png?raw=true" width="800">
 
-* 입력을 받기는 여러 개 받으나, 3가지 모두를 대입시키는 것이 아니라 3번째 값만 입력됨. *d로 무시시킴.
-
-* 구분하는 기호로서, 빈칸 또는 줄바꿈을 찾는다.
+* `printf()`와는 완전히 다르다.
+* `*`이 붙은 것은 무시함. 
+    * 입력을 받기는 여러 개 받으나, 3가지 모두를 대입시키는 것이 아니라 3번째 값만 입력됨. *d로 무시시킴.
+    * 구분하는 기호로서, 빈칸 또는 줄바꿈을 찾는다.
