--- a/06_반복문/6.18_루프_안에서_함수의_반환값_사용하기.md
+++ b/06_반복문/6.18_루프_안에서_함수의_반환값_사용하기.md
@@ -1,7 +1,5 @@
 # 6.18 루프 안에서 함수의 반환값 사용하기
 
-<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter6/array3.png?raw=true">
-
 # 예제
 
 - 밑과 지수를 입력하면 거듭제곱 결과를 알려주는 프로그램
@@ -58,7 +56,7 @@
   - prototype으로 선언되어 있어도 컴파일 과정 중 교차되며 확인되기에 문제 없음.
 - main이 함수 중 맨 위에 위치.
 
-            int compute+pow(int base, int exp);
+            int compute_pow(int base, int exp);
 
             int main()
             {
