--- a/07_분기문/7.2_표준_입출력_함수들_getchar()_putchar()_예제.md
+++ b/07_분기문/7.2_표준_입출력_함수들_getchar()_putchar()_예제.md
@@ -13,12 +13,19 @@
 ### 예제 1: Introduce getchar(), putchar()
 
 - 특징 1: int로 받아간다 - 정수 입력을 하면 ASCII 코드로 출력해준다.
+    - getchar(): 글자 한 개를 가져온다.
+	    - int로 가져온다.
+	    - char 타입으로 받는다?? => ASCII
 
+    - putchar(): 글자 한 개를 출력한다.
+        - int로 가져온다.
+        - 정수를 입력하면 ascii 코드 출력.
+- char
             char ch;
 
             ch = getchar();
             putchar(ch);
-
+- int
             int ch;
 
             ch = getchar();
@@ -41,7 +48,7 @@
             putchar(ch);
 
 - **주의사항**: 내부적 작동 방식
-  - 원래 한 글자 입력하면 바로 출력 받아야 하는데 그렇지 않다.
+  - 원래 한 글자 입력하면 바로 입력한 '한 글자'가 출력되어야 하는데 그렇지 않다.
 
   - 실제로는 왕창 여러 글자 받음.
   - 입력 끝났다는 의미로 enter를 누르면
@@ -52,14 +59,8 @@
 
             char ch;
 
-            ch = getchar();
-            while (ch != '\n') // 문자열의 끝이구나를 인식. while문 종료 목적.
-            {
+            while ((ch = getchar()) != '\n') // 문자열의 끝이구나를 인식. while문 종료 목적.
                 putchar(ch);
-
-                ch = getchar();
-            }
-
             putchar(ch);
 
 ### 예제 3: 필터링 Filter a specific character
