--- a/08_문자_입출력과_입력_유효성_검증/8.8_메뉴_만들기_예제.md
+++ b/08_문자_입출력과_입력_유효성_검증/8.8_메뉴_만들기_예제.md
@@ -82,13 +82,12 @@
                         count();
                         break;
                     default :
-                        printf("Error with %d. \n", user_choice)
+                        printf("Error with %d. \n", user_choice);
                         exit(1);
                         break;
                     }
                 }
                 return 0;
-
             }
 
             void count(void)
@@ -101,7 +100,6 @@
                     printf("%d\n", i);
                 while (getchar() != '\n')
                     continue;
-
             }
 
             char get_choice(void)
@@ -120,8 +118,7 @@
                     user_input = get_first_char();
                 }
 
-                return user_input
-
+                return user_input;
             }
 
             char get_first_char(void)
@@ -133,7 +130,6 @@
                     continue;
 
                 return ch;
-
             }
 
             int get_integer(void)
@@ -149,5 +145,4 @@
                 }
 
                 return input;
-
             }
