--- a/08_문자_입출력과_입력_유효성_검증/8.9_텍스트_파일_읽기.md
+++ b/08_문자_입출력과_입력_유효성_검증/8.9_텍스트_파일_읽기.md
@@ -10,8 +10,6 @@
             #include <stdio.h>
             #include <stdlib.h> // exit()
 
-            void printNum(int number);
-
             int main()
             {
                 int c;
@@ -36,7 +34,7 @@
 
 - `fopen` 함수: 파일로부터 데이터를 읽어오거나 입력할 수 있는 통로를 열어줌.
 
-  - `file = fopen(file_name, "r");`" 함수가 반환하는 값이 file에 저장됨.
+  - `file = fopen(file_name, "r");` 함수가 반환하는 값이 file에 저장됨.
   - `r`: read, 데이터를 읽으려고 할 때 사용.
     - 기본: text 파일. // binary 등 있음.
   - `w`: write, 데이터를 입력하려고 할 때 사용.
