--- a/09_함수/9.6_재귀_호출.md
+++ b/09_함수/9.6_재귀_호출.md
@@ -5,7 +5,7 @@
 
       #include <stdio.h>
 
-      void my_func(int);
+      void my_func(int n);
 
       int main()
       {
@@ -21,9 +21,9 @@
             my_func(n + 1);
       }
 
+
 * 실행 시 비정상종료 (stack overflow)
   - 단, 실행 화면에서 주목할 점
-    - 
     - level이 올라갈 때 주소는 달라진다. 스택에 사실은 프로그램도 같이 쌓임.
   - 디버깅을 통해 가시적으로 확인 가능: 함수가 자기 자신을 호출함.
 
