--- a/10_배열과_포인터/10.14_2차원_배열과_포인터.md
+++ b/10_배열과_포인터/10.14_2차원_배열과_포인터.md
@@ -11,7 +11,7 @@
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter10/array22.png?raw=true">
 
 - `arr = arr[0] == &arr[0] == &arr[0][0]` != `a[0][0]`
-- **`&arr[0]`은 `arr[0]`의 주소인 것처럼 보이지만 아니다.**
+- **`&arr[0]`은 `arr[0]`를 저장하고 있는 주소가 아니다. 따로 저장되는 것은 아니다. 단지 계산을 해줄 뿐.**
 - 2차원 배열과 그냥 숫자를 더하면 (ex: `arr + 1`), 행이 올라감. (결과는 주소)
 - 다중포인터처럼 사용 가능.
 
