--- a/10_배열과_포인터/10.3_포인터의_산술_연산.md
+++ b/10_배열과_포인터/10.3_포인터의_산술_연산.md
@@ -37,4 +37,5 @@
 - 주소끼리 더하는 것은 의미 없음.
 - 주소끼리 빼는 것은 됨.
   - **거리의 의미**: 실제 메모리는 1열로 쭉 되어 있음.
+    - 결과: 차이나는 __칸 수__ 출력. (`i = 2`)
     - 주어진 자료형 사이즈만큼 몇 칸 건너가있는지 확인.
