--- a/10_배열과_포인터/10.4_포인터와_배열.md
+++ b/10_배열과_포인터/10.4_포인터와_배열.md
@@ -14,6 +14,9 @@
 
                 int* ptr = arr;
 
+                // int* ptr = NULL;
+                // ptr = arr;
+
                 printf("%p %p %p\n", ptr, arr, &arr[0]); // ① 모두 같은 값
 
                 ptr += 2; ①
@@ -26,9 +29,6 @@
 
                 printf("%d %d %d \n", *ptr + 1, *arr + 3, arr[3]);
                 // ③ 주의
-
-                int* ptr = NULL;
-                ptr = arr;
 
                 return 0;
             }
