--- a/11_문자열_함수들/11.3_문자열의_배열.md
+++ b/11_문자열_함수들/11.3_문자열의_배열.md
@@ -19,14 +19,14 @@
             };
 
             const char* temp1 = "Dancing in the rain";
-            const char* temp2 = "Studyinh the C++ language";
+            const char* temp2 = "Studying the C++ language";
 
 - `const char* mythings[5]`: `char`타입에 대한 포인터가 5개 있는 배열
   - `sizeof(mythings)`: 20
-    - 포인터 (4) \* 5 = 20
+    - 포인터 (4) * 5 = 20
 - `char yourthings[5][40]`: 아예 크기가 정해져 있는 40개 짜리 배열을 5개 만듦.
   - `sizeof(yourthings)`: 200
-    - 배열 => char(1) _ 5 _ 40 = 200
+    - 배열 => char(1) * 5 * 40 = 200
 
 ## 메모리 주소 살펴보기
 
@@ -52,9 +52,9 @@
 
   - `......` 컴파일러가 넣어주는 0, 40바이트 중 남는 공간, 빈칸
 
-* 왜 1번과 2번에 모두 있는 데이터가 있고, 그렇지 않은 데이터가 있을까?
+* 1, 2 사진을 보면, 1번에만 있는 데이터가 있고, 1번과 2번 두 곳에서 다 찾을 수 있는 데이터가 있다. 왜 그런가?
   - `yourthings`: 프로그램의 일부로서 저장이 되어 있다가, 사본이 `yourthings`에 복사해서 들어가는 것이기 때문에 2 copies로 존재한다.
-* `mythings`: 메모리에 하나로만 존재.
+  - `mythings`: 메모리에 하나로만 존재한다.
 
 * 포인터로 저장하는 것과 배열로 저장하는 것이 어떤 차이가 있는지 알 수 있다.
   - 포인터: 하나의 값으로만 저장하기 때문에 메모리를 절약할 수 있음. but Read only, 값을 바꿀 순 없음.
