--- a/11_문자열_함수들/11.4_문자열을_입력받는_다양한_방법들.md
+++ b/11_문자열_함수들/11.4_문자열을_입력받는_다양한_방법들.md
@@ -11,9 +11,9 @@
             int result = scanf("%s", name);
 
 - 메모리 공간을 확보해야 함. (`char name[128]`)
-- scanf() vs gets()
-  - scanf(): 한 단어만 읽어 들임.
-  - gets() : 한 줄을 통째로 읽을 수 있음. 줄 입력 시, enter를 입력받는 순간, 마지막에 있던 줄바꿈 문자를 삭제하고 null character를 입력시킴.
+- `scanf()` vs `gets()`
+  - `scanf()`: 한 단어만 읽어 들임.
+  - `gets()` : 한 줄을 통째로 읽을 수 있음. 줄 입력 시, enter를 입력받는 순간, 마지막에 있던 줄바꿈 문자를 삭제하고 null character를 입력시킴.
 
 ## gets와 puts
 
