--- a/13_파일_입출력/13.2_텍스트_파일_입출력_예제.md
+++ b/13_파일_입출력/13.2_텍스트_파일_입출력_예제.md
@@ -38,6 +38,8 @@
                 return 0;
             }
 
+* argc와 argv 참고: [링크](https://dojang.io/mod/page/view.php?id=696)
+
 ### 관련 내용
 
 * fopen은 파일을 처리할 때 필요한 묶음에 대한 포인터를 리턴함.
