--- a/13_파일_입출력/13.4_텍스트_파일_입출력_함수들.md
+++ b/13_파일_입출력/13.4_텍스트_파일_입출력_함수들.md
@@ -46,34 +46,42 @@
                 return 0;
             }
 
-* `record` 파일이 없는 상황
-* r+
-    - 내용물이 없을 때
-        - <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file9.png?raw=true">
-    - 내용물이 있을 때
-        - <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file13.png?raw=true">
-        - 덮어 쓰는데, 새로 입력한 만큼만 앞에서부터 덮어씀.
-* w+
-    - <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file10.png?raw=true">
-        - 저장하고 다시 출력.
-        - `record`는 확장자가 없음. 그러나 확장자는 없어도 내용물이 텍스트기에 볼 수 있음.
-    - 확장자를 변경한 후
-        - <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file11.png?raw=true">
-        - 내용물이 없어짐.
-    - 새로 파일을 여는데 __overwrite__ 
-* a+
-    - <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file12.png?raw=true">
-    - 덧붙임.
+### `record` 파일이 없는 상황
+#### r+
+- 내용물이 없을 때
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file9.png?raw=true">
+
+- 내용물이 있을 때
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file13.png?raw=true">
+
+- 덮어 쓰는데, 새로 입력한 만큼만 앞에서부터 덮어씀.
+#### w+
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file10.png?raw=true">
+
+- 저장하고 다시 출력.
+- `record`는 확장자가 없음. 그러나 확장자는 없어도 내용물이 텍스트기에 볼 수 있음.
+
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file11.png?raw=true">
+
+- 확장자를 변경한 후
+    - 내용물이 없어짐.
+- 새로 파일을 여는데 __overwrite__ 
+
+#### a+
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file12.png?raw=true">
+
+- 덧붙임.
 
 ## fscanf()와 fgets()의 차이
 * 위 예제에서 `a+`로 설정한 것으로 가정.
 
 ### scanf()
-- <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file14.png?raw=true">
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file14.png?raw=true">
+
 * 한 줄에 여러 개를 입력해도 다른 줄로 출력
 
 ### fgets()
-- <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file15.png?raw=true">
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file15.png?raw=true">
 
 - 줄 단위로 입력받기 가능
 - __문법적 차이 (주의점)__
