--- a/13_파일_입출력/13.7_기타_입출력_함수들.md
+++ b/13_파일_입출력/13.7_기타_입출력_함수들.md
@@ -23,7 +23,7 @@
 
             fclose(fp);
 
-- <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file18.png?raw=true">
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file18.png?raw=true">
 
 ## setvbuf()
 * setvbuf()
@@ -50,13 +50,13 @@
 
 - 한 글자만 읽고, 버퍼를 모두 출력해보기.
 
-- <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file19.png?raw=true">
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file19.png?raw=true">
 
 * 한 글자만 읽었는데 32글자가 출력됨.
     - 한 번에 여러 글자 씩 버퍼로 읽기 때문.
     - 파일에서 버퍼로 옮기는 것은 비교적 느리지만, 버퍼로부터 여러 글자, 한 글자로 가져오는 것은 빠름.
 
-    FILE* fp;
+            FILE* fp;
             int ch;
             fp = fopen("input.txt", "r");
 
@@ -81,7 +81,7 @@
             fclose(fp);
 
 * 위 예시처럼 버퍼를 먼저 채우고 출력해보면?
-    - 버퍼 dump를 먼저 함.
+버퍼 dump를 먼저 함.
 - <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter13/file20.png?raw=true">
 
 * 과정
