--- a/14_구조체/14.11_신축성_있는_배열_멤버.md
+++ b/14_구조체/14.11_신축성_있는_배열_멤버.md
@@ -71,15 +71,15 @@
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter14/struct21.png?raw=true">
 
 * `struct flex`의 size는 16으로 나타남.
-    - 멤버가 3개 (unsigned int 4, double 8, ...)인데 16
+    - 멤버가 3개 (unsigned int 4, double 8, ...): 16
 * 주소
     - 구조체 자체의 주소 == 첫 번째 멤버의 주소
 * size
     - `size_t count`: unsigned int => 4 bytes
-    - `pf->count`로 나타나는 주소와 `pf->average`로 나타나는 주소 사이 차이가 `pf->Count`가 갖고 있는 메모리.
+    - `pf->count`로 나타나는 주소와 `pf->average`로 나타나는 주소 사이 차이가 `pf->count`가 갖고 있는 메모리.
         - 8
         - memory padding
-    - `pf->average`도 douvle로 8
+    - `pf->average`도 double로 8
     - `pf->count`는 padding으로 8
 * `pf-values`
     - 주소와 값이 같이 나타남.
@@ -110,7 +110,7 @@
             
 * 주의사항 1
     - `double* values`: 포인터기 때문에 자체 메모리 보유 o (위 예제와의 차이)
-    - `nf.value = (double*)malloc(sizeof(double) * n); 
+    - `nf.value = (double*)malloc(sizeof(double) * n);` 
         - 동적 할당 배열은 어디에 배열될지 알 수 없음.
         - 위 예제의 `struct flex`는 뒤에 붙기 때문에 어디에 있는지 파악 O
     - 구조체가 가리키는 메모리와 `nf.value` 마지막 멤버가 가리키는 메모리가 서로 다른 곳에 떨여져 있을 수 있음.  
