--- a/14_구조체/14.24_복잡한_선언을_해석하는_요령.md
+++ b/14_구조체/14.24_복잡한_선언을_해석하는_요령.md
@@ -36,17 +36,17 @@
 ## 안 되는 예시
 
 1. 함수가 배열을 반환할 수는 없다.
-            int f(int)[] // wrong
+    - `int f(int)[] // wrong`
 * 배열에 대한 포인터를 반환할 수는 있다.
-       	    int(*f(int))[];
+    - `int(*f(int))[];`
 2. 함수는 함수를 반환할 수 없다.
-	        int g(int)(int); // wrong
+    - `int g(int)(int); // wrong`
 * 함수에 대한 포인터를 반환할 수는 있다.
-        	int (*g(int))(int);
+    - `int (*g(int))(int);`
 3. 함수의 배열은 불가능하다.
-        	int a[10](int); // wrong
+    - `int a[10](int); // wrong`
 * 함수 포인터의 배열은 가능하다.
-        	int (*x2[10])(int);
+    - `int (*x2[10])(int);`
 
 ## typedef 이용하기
             typedef int FCN(int);
