--- a/14_구조체/14.7_구조체를_함수로_전달하는_방법.md
+++ b/14_구조체/14.7_구조체를_함수로_전달하는_방법.md
@@ -73,7 +73,6 @@
             }
 
 ## 함수 최적화
-
             #define _CRT_SECURE_NO_WARNINGS
             #include <stdio.h>
             #include <string.h>
@@ -97,9 +96,7 @@
                     8543.94
                 };
 
-                printf("Total : $%.2f.\n",
-                  sum(&my_fortune.bank_saving, &my_fortune.fund_invest));
-                    sum(my_fortune));
+                printf("Total : $%.2f.\n", sum(my_fortune));
 
                 return 0;
             }
