--- a/14_구조체/14.8_구조체와_함수_연습문제.md
+++ b/14_구조체/14.8_구조체와_함수_연습문제.md
@@ -60,9 +60,7 @@
                 printf("Input your first name:\n>> ");
 
                 flag = scanf("%[^\n]%*c", ptr_nc->first); 
-                // s_gets(ptr_nc->first, NLEN);
-                // s_gets를 scanf로 대체 [^\n] 줄바꿈 있을 때까지 받아라. 
-                // *c: 문자 하나를 무시해라. 줄바꿈 무시.
+
                 if (flag != 1)
                     printf("Wrong input");
 
@@ -84,6 +82,12 @@
                 printf("Hi, %s %s. Your name has %d characters. \n",
                     ptr_nc->first, ptr_nc->last, ptr_nc->num);
             }
+#### 기타
+* `flag = scanf("%[^\n]%*c", ptr_nc->first);`
+    - `s_gets(ptr_nc->first, NLEN);`와 같음.
+        - s_gets를 scanf로 대체 
+        - `[^\n]`: 줄바꿈 있을 때까지 받아라. 
+        - `*c`: 문자 하나를 무시해라. 줄바꿈 무시.
 
 ## 예제 2  
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter14/struct17.png?raw=true">
