--- a/16_전처리기와_라이브러리/16.11_inline_함수.md
+++ b/16_전처리기와_라이브러리/16.11_inline_함수.md
@@ -45,9 +45,9 @@
                 return 123;
             }
 
-### inline 함수 동작 살펴보기: 어셈블리
-#### 보는 방법
-* 1. disabled
+## inline 함수 동작 살펴보기: 어셈블리
+### 보는 방법
+#### 1. disabled
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter16/pre13.png?raw=true">
 
 - property -> all options -> inline function expansion -> disabled
@@ -57,7 +57,7 @@
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter16/pre14.png?raw=true">
 
 - `call foo` => 어쨌든 함수를 호출하고 있음을 볼 수 있음.
-* 2. only inline
+#### 2. only inline
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter16/pre15.png?raw=true">
 
 - disabled -> only inline
@@ -66,7 +66,8 @@
 
 - 함수 콜이 사라짐.
 
-3) only inline => 함수 foo를 사용하지 않고 `ret = 5`를 한 것과 내부적으로 동일.
+#### 3. only inline
+* 함수 foo를 사용하지 않고 `ret = 5`를 한 것과 내부적으로 동일.
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter16/pre17.png?raw=true">
 
