--- a/16_전처리기와_라이브러리/16.9_#pragma_지시자.md
+++ b/16_전처리기와_라이브러리/16.9_#pragma_지시자.md
@@ -40,8 +40,8 @@
             #define PACK1 _Pragma("pack(1)")
             PACK1
 
-* #pragma pack(1) : 패딩을 하지 말라(1) => 13
-* _Pragma("pack(1)"): 전처리 연산자. => 13
+* `#pragma pack(1)` : 패딩을 하지 말라(1) => 13
+* `_Pragma("pack(1)")` : 전처리 연산자. => 13
     - Visual Studio => X
     - 위와 동일하게 작동.
     - 문자열 (`"pack(1)"`)을 번역과정에서 destringizing함.
