--- a/06_반복문/6.15_중첩된_루프들.md
+++ b/06_반복문/6.15_중첩된_루프들.md
@@ -92,18 +92,21 @@
 
 			#define NUM_ROWS 12
 			#define FIRST_CHAR 'A'
-			#define LAST_CHAR 'K'
+			#define LAST_CHAR 'L'
 
+			int main(void)
+			{
+				const int num_row = LAST_CHAR - FIRST_CHAR + 1;
 
-    		const char last_char = 'L';
-    		const int num_row = last_char - FIRST_CHAR + 1;
+				int r; // row loop
+				int c; // character loop
 
-    		int r; // row loop
-    		int c; // character loop
+				for (r = 0; r < num_row; ++r)
+				{
+					for (c = FIRST_CHAR + r; c < FIRST_CHAR + num_row; ++c)
+						printf("%c ", c);
+					printf("\n");
+				}
 
-    		for (r = 0; r < num_row; ++r)
-    		{
-    			for (c = FIRST_CHAR + r; c < FIRST_CHAR + num_rows; ++c)
-    				printf("%c ", c);
-    			printf("\n");
-    		}
+				return 0;
+			}
