--- a/07_분기문/7.10_루프_도우미_continue와_break.md
+++ b/07_분기문/7.10_루프_도우미_continue와_break.md
@@ -6,7 +6,7 @@
 
             for (int i = 0; i < 10; ++i)
             {
-                if (1 == 5)
+                if (i == 5)
                     continue;
 
                 printf("%d ", i);
@@ -20,7 +20,7 @@
 
             for (int i = 0; i < 10; ++i)
             {
-                if (1 != 5)
+                if (i != 5)
                     printf("%d ", i);
             }
 
@@ -34,7 +34,7 @@
 
             for (int i = 0; i < 10; ++i)
             {
-                if (1 == 5)
+                if (i == 5)
                     break;
 
                 printf("%d ", i);
@@ -52,7 +52,7 @@
                 if (c == 'a')
                     continue;
                 putchar(c);
-                count++
+                count++;
             }
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter7/loop1.png?raw=true">
