--- a/09_함수/9.9_이진수_변환_예제.md
+++ b/09_함수/9.9_이진수_변환_예제.md
@@ -7,20 +7,19 @@
             void print_binary_loop(unsigned long n) {
 
                 int dividend = n;
-                int remainer = 0;
+                int remainder = 0;
                 int quotient = 0;
 
                 while (dividend > 0)
                 {
                     quotient = dividend / 2;
-                    remainer = dividend % 2;
+                    remainder = dividend % 2;
 
-                    printf("%d", remainer);
+                    printf("%d", remainder);
 
                     dividend = quotient;
                 }
                 printf("\n");
-
             }
 
 ## prof 반복문
@@ -30,15 +29,14 @@
                 while (1)
                 {
                     int quotient = num / 2;
-                    int remainer = num % 2;
+                    int remainder = num % 2;
 
-                    printf("%d", remainer);
+                    printf("%d", remainder);
 
                     num = quotient;
 
                     if (num == 0) break;
                 }
-
                 printf("\n");
             }
 
@@ -46,19 +44,19 @@
 
             void print_binary(unsigned long n)
             {
-                int remainer = n % 2;
+                int remainder = n % 2;
 
                 if (n >= 2)
                     print_binary(n / 2);
 
-                printf("%d", remainer);
+                printf("%d", remainder);
 
                 return;
             }
 
 - 출력이 recursion 이후에 있음.
 
-  - 이전 강의(9.6)에서 설명되어 있듯, 조건문에 걸려서 실행되지 못했던 `printf()`가, `n`이 조건을 만족하지 않게 되자, 들어갔던 값(`remainer`)의 순서대로 실행됨.
+  - 이전 강의(9.6)에서 설명되어 있듯, 조건문에 걸려서 실행되지 못했던 `printf()`가, `n`이 조건을 만족하지 않게 되자, 들어갔던 값(`remainder`)의 순서대로 실행됨.
 
 - 반복문과 recursion의 결과가 같지 않다?
   - 사실, 이런 문제를 풀 땐, 이후에 배울 배열을 이용하면 반복문으로도 제대로 된 순서로 출력할 수 있음.
