--- a/10_배열과_포인터/10.11_배열_매개변수와_const.md
+++ b/10_배열과_포인터/10.11_배열_매개변수와_const.md
@@ -21,13 +21,13 @@
                     arr[i] += val;
             }
 
-            int sum(int ar[], int n)
+            int sum(int arr[], int n)
             {
                 int i;
                 int total = 0;
 
                 for (i = 0; i < n; i++)
-                    total += ar[i] ++; // ar[i]의 값이 변하도록 일부러.
+                    total += arr[i] ++; // arr[i]의 값이 변하도록 일부러.
 
                 return total;
             }
@@ -55,13 +55,13 @@
 
 #### int_sum
 
-            int sum(const int ar[], const int n)
+            int sum(const int arr[], const int n)
             {
                 int i;
                 int total = 0;
 
                 for (i = 0; i < n; i++)
-                    total += ar[i]; // 수정.
+                    total += arr[i]; // 수정.
 
                 return total;
             }
@@ -87,7 +87,7 @@
 
 - 변경 후
 
-            void print_array(const int arr[], constint n)
+            void print_array(const int arr[], const int n)
             {
                 for (int i = 0; i < n; i++)
                     printf("%d ", arr[i]);
