--- a/10_배열과_포인터/10.13_포인터의_배열과_2차원_배열.md
+++ b/10_배열과_포인터/10.13_포인터의_배열과_2차원_배열.md
@@ -1,4 +1,4 @@
-`# 10.13 포인터의 배열과 2차원 배열
+# 10.13 포인터의 배열과 2차원 배열
 
 - 포인터의 배열을 이용하면 배열의 배열 (2차원 배열, 다차원 배열)을 만들 수 있다.
 
@@ -7,11 +7,11 @@
   <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter10/array19.png?raw=true">
 
 - 2차원이지만 결국 1차원구조.
-- 포인터의 배열
+## 포인터의 배열
 
-  - 참고: `(int*) parr[2]` int타입에 대한 포인터라는 자료형이 존재하고, 그 자료형을 2개 짜리 배열로 선언한다고 생각해보기.
-  - 문법 상 괄호를 쓰면 달라짐.
-  - 행 하나의 대표주소
+- 참고: `(int*) parr[2]` int타입에 대한 포인터라는 자료형이 존재하고, 그 자료형을 2개 짜리 배열로 선언한다고 생각해보기.
+- 문법 상 괄호를 쓰면 달라짐.
+- 행 하나의 대표주소
 
   <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter10/array20.png?raw=true">
 
@@ -24,10 +24,9 @@
 
             int* parr[2] = { arr0, arr1 };
 
-- parr[0]: arr0의 첫 주소, parr[1]: arr1의 첫 주소
-
-  - `int* parr`: 포인터가 담길 수 있는 공간을 2개 확보한 배열
-
+- `parr[0]`: `arr0`의 첫 주소, `parr[1]`: `arr1`의 첫 주소
+  - `int* parr`: 포인터가 담길 수 있는 공간을 2개 확보한 배열.  
+- 반복문
             for (int j = 0; j < 2; ++j)
             {
                 for (int i = 0; i < 3; ++i)
@@ -87,8 +86,9 @@
             printf("%p\n", &arr[0][0]); // 6번
 
 - 1번과 2번은 다르다
-  - 1번은 포인터 자체의 주소 (pointer array 자체의 주소)
+  - 1번은 포인터 자체의 주소 (pointer들만 담긴 array의 주소)
   - 가리키고 있는 대상의 주소
+  - `printf("%d == %d\n", **&parr[0], *parr[0]); // 1 == 1`
 
 * 3번: 배열의 이름은 첫 번째 원소의 주소인 것처럼 사용할 수는 있지만, 주소를 위해 별도의 공간을 갖고 있다는 이야기는 아님.
 
@@ -142,8 +142,8 @@
 * 출력
   - 1번째와 2번째 사용되는 메모리 방식이 다르다.
   - 1번째는 메모리별 차이가 모두 일괄된 값으로 나타나진 않음.
-  - 2번째: 칼 같이 15.
-    <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter10/array21.png?raw=true">
+  - 2번째: 칼 같이 15.  
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter10/array21.png?raw=true">
 
 - 포인터의 배열 사용법.
 - 포인터의 배열이 다차원 배열인 것처럼 사용될 수 있다.
