--- a/10_배열과_포인터/10.2_배열의_기본적인_사용방법.md
+++ b/10_배열과_포인터/10.2_배열의_기본적인_사용방법.md
@@ -31,7 +31,7 @@
 
 ## 사용법 2: 주소
 
-- `printf("%p %p\n", hugh, &high[0]);`
+- `printf("%p %p\n", high, &high[0]);`
   - 배열의 이름은 전체 할당 받은 공간의 첫 번째 원소의 주소와 같다.
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter10/array3.png?raw=true">
