--- a/11_문자열_함수들/11.1_문자열을_정의하는_방법들.md
+++ b/11_문자열_함수들/11.1_문자열을_정의하는_방법들.md
@@ -4,17 +4,17 @@
 
 ## 문자열을 초기화하는 방법
 
-- 1. `puts()` 함수: 문자열 출력.
+- `puts()` 함수: 문자열 출력.
   - 문자열의 포인터를 하나 받아들임.
   - 문자열이 배열의 일종처럼 메모리에 배치가 되어 있다면, 함수에 전달할 땐 첫 번째 주소를 포인터로 넘겨줄 수 있다.
   - 상수로 바로 집어넣기.
-- 2. 배열로 넣기 `char words[MAXLENGTH] = "A string in an array"'`
+- 배열로 넣기 `char words[MAXLENGTH] = "A string in an array"'`
   - `char`타입의 배열
   - 넣으려는 단어 수가 몇인지 정확하게 알기 어렵기 때문에 넉넉한 사이즈 선언하는 편. (`#define MAXLENGTH 81`)
-- 3. Symbolic constant로 만들기. `#define MESSAGE "A symbolic string constant"`
+- Symbolic constant로 만들기. `#define MESSAGE "A symbolic string constant"`
   - `puts(MESSAGE)`
   - `puts()` 함수는 맨 뒤에 알아서 `\n`를 넣어준다.
-- 4. 포인터로 선언 (`const char* pt1 = "A pointer to a string.";`)
+- 포인터로 선언 (`const char* pt1 = "A pointer to a string.";`)
   - 문자열에 대한 포인터를 출력하는 것 가능. `puts(pt1)`
   - 포인터는 첫 주소만 가져온 것.
 
