--- a/16_전처리기와_라이브러리/16.6_#include와_헤더_파일.md
+++ b/16_전처리기와_라이브러리/16.6_#include와_헤더_파일.md
@@ -84,8 +84,10 @@
     - 인라인 함수 (C언어 코딩 도장)
         - 실행을 해보면 일반 함수와 다르지 않습니다. 하지만 다음과 같이 인라인 함수는 호출을 하지 않고 함수의 코드를 그 자리에서 그대로 실행합니다. 즉, 컴파일러는 함수를 사용하는 부분에 함수의 코드를 복제해서 넣어줍니다. 
         - 즉, 함수 호출 과정이 없으므로 속도가 좀 더 빠릅니다. 따라서 인라인 함수는 자주 호출되면서 속도가 중요한 부분에 주로 사용합니다. 단, 함수의 코드가 복제되므로 함수를 많이 사용하면 실행 파일의 크기가 커집니다.
-        - <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter16/pre9.png?raw=true">
-        - 출처: [C언어 코딩 도장](https://dojang.io/mod/page/view.php?id=748)
+
+<img src="https://github.com/uber9ma/following_C/blob/master/images/chapter16/pre9.png?raw=true">
+
+- 출처: [C언어 코딩 도장](https://dojang.io/mod/page/view.php?id=748)
 
 ### my_structures.h
 
