공부 내용 업로드
- 복습: chapter09 ~ chapter11(11.5)

--- a/10_배열과_포인터/10.11_배열_매개변수와_const.md
+++ b/10_배열과_포인터/10.11_배열_매개변수와_const.md
@@ -66,9 +66,9 @@
                 return total;
             }
 
-- `int ar[]` => `const int ar[]`: 배열 내 값이 변할 필요는 없기 때문에.
-  - `ar[i] ++`이 에러로 발생(컴파일 에러)
-  - `ar[i]`로 변경
+- `int arr[]` => `const int arr[]`: 배열 내 값이 변할 필요는 없기 때문에.
+  - `arr[i] ++`이 에러로 발생(컴파일 에러)
+  - `arr[i]`로 변경
 - `int n` => `const int n`: 역시 마찬가지.
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter10/array16.png?raw=true">
