--- a/10_배열과_포인터/10.2_배열의_기본적인_사용방법.md
+++ b/10_배열과_포인터/10.2_배열의_기본적인_사용방법.md
@@ -3,7 +3,8 @@
 ## 사용법 1
 
 - 예제 코드
-  #define MONTHS 12
+
+            #define MONTHS 12
 
             int high[MONTHS] = { 2, 5, 11, 18, 23, 27, 29, 30, 26, 30, 20, 12 }; ①
 
@@ -21,12 +22,16 @@
             return 0;
 
 - ① 선언은 최소 배열 내 원소 개수만큼.
-  ex) `int high[MONTHS] = { 2, 5, 11, 18, 23, 27, 29, 30, 26, 30, 20, 12 };`
-- ② 반복문 이용할 땐 인덱스 숫자 - 1: `i < MONTHS`
-- ③ `배열[인덱스]`는 하나의 변수처럼 사용 가능: `high[i]`
+  - ex) `int high[MONTHS] = { 2, 5, 11, 18, 23, 27, 29, 30, 26, 30, 20, 12 };`
+- ② 반복문 이용할 땐 인덱스 숫자 - 1
+  - `i < MONTHS`
+- ③ `배열[인덱스]`는 하나의 변수처럼 사용 가능
+  -  `high[i]`
 - ④ 처음 선언한 후, 배열을 다시 선언하는 것은 불가능.
-  - ex) `int array[2] = {1, 2}`
-    - `array = {1, 2}` => 에러
+
+            int array[2] = {1, 2};
+            array = {1, 2}; => 에러
+
 - ⑤ 원소 변경은 하나 씩(각각) 변경 가능
 
 ## 사용법 2: 주소
