--- a/11_문자열_함수들/11.1_문자열을_정의하는_방법들.md
+++ b/11_문자열_함수들/11.1_문자열을_정의하는_방법들.md
@@ -28,7 +28,7 @@
   - `words[3] = 'p';`는 ok
     - 배열 특정 원소에 접근해서 값을 바꿀 수 있음.
   - `pt1[8] = 'A';`는 런타임 error.
-    - 건들면 안 되는 곳을 건들임. (읽기 전용 메모리에 저장된 데이터의 값을 바꾸려고 시도하면 운영체제가 중단시킨다.)
+    - 건드리면 안 되는 곳을 건드림. (읽기 전용 메모리에 저장된 데이터의 값을 바꾸려고 시도하면 운영체제가 중단시킨다.)
     - `char* ptr1`을 `const char* ptr1`으로 하는 것이 바람직.
 
 ## 기타 성질
