--- a/10_배열과_포인터/10.13_포인터의_배열과_2차원_배열.md
+++ b/10_배열과_포인터/10.13_포인터의_배열과_2차원_배열.md
@@ -27,6 +27,7 @@
 - `parr[0]`: `arr0`의 첫 주소, `parr[1]`: `arr1`의 첫 주소
   - `int* parr`: 포인터가 담길 수 있는 공간을 2개 확보한 배열.  
 - 반복문
+
             for (int j = 0; j < 2; ++j)
             {
                 for (int i = 0; i < 3; ++i)
@@ -42,14 +43,14 @@
             int arr[2][3] = {{1,2,3}, {4,5,6}};
 
             int *parr0 = arr[0];
-            int *parr = arr[1];
+            int *parr1 = arr[1];
 
             for (int i = 0; i < 3; ++i)
-            printf("%d" , parr0[i]);
+              printf("%d" , parr0[i]);
             printf("\n");
 
             for (int i = 0; i < 3; ++i)
-            printf("%d" , parr1[i]);
+              printf("%d" , parr1[i]);
             printf("\n");
 
 - 배열 내 직접 2개의 배열 선언
