--- a/11_문자열_함수들/11.4_문자열을_입력받는_다양한_방법들.md
+++ b/11_문자열_함수들/11.4_문자열을_입력받는_다양한_방법들.md
@@ -6,7 +6,7 @@
 
             #define STRLEN 81
 
-            // char* name = ""; runtime
+            // char* name = ""; // runtime
             char name[128];
             int result = scanf("%s", name);
 
