공부 내용 업로드
- 복습: chapter11(11.6) ~ chapter13

--- a/12_Memory_Management/12.17_동적_할당_메모리와_저장_공간_분류.md
+++ b/12_Memory_Management/12.17_동적_할당_메모리와_저장_공간_분류.md
@@ -6,7 +6,7 @@
 * 가장 특징으로는 힙 메모리에 속한다는 점으로, 필요한만큼 메모리에 용량을 할당해달라 요청할 수 있다.
 * 운영체제는 요청받은 메모리의 __포인터를__ 넘겨준다.
     - 자동으로 duration 관리가 이루어지진 않음.
-    - 이에 힙 메모리에 헤제하지 않는 이상, 메모리에 머묾.
+    - 이에 힙 메모리에 해제하지 않는 이상, 메모리에 머묾.
 
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter12/alloc14.png?raw=true">
 
