--- a/12_Memory_Management/12.2_객체와_식별자_lvalue와_rvalue.md
+++ b/12_Memory_Management/12.2_객체와_식별자_lvalue와_rvalue.md
@@ -24,20 +24,25 @@
 * `arr[0] = 7;`: `arr[0]`가 identifier는 아니나 object.
 
 ## 예시 2 L-Value와 R-Value
-* refer: 무언가를 부르나, 다른 방식으로 부르다. 또 다른 이름처럼 사용한다.
+`refer: 무언가를 부르나, 다른 방식으로 부르다. 또 다른 이름처럼 사용한다.`
 
-### 예시
+#### 예시 1
 
 * `var_name = 3;`
     - 변수 이름은 메모리 공간이 아님. 변수 이름이 내부적으로 가리키는(referring) 메모리에 3이라는 값을 복사한다.
     - modifiable lvalue;
         - 왼쪽에 있는 것을 통해 접근하는 변수는 바꿀 수 있다.
-* L-Value: 메모리 공간을 갖고 있다. 값을 저장할 수 있다.
-* L-Value가 R-Value가 된다.: 변수의 값만 갖고 오는 것이다.
+#### 예시 2
 
-`pt = &var_name`;
-`int* ptr = arr;`
-`pt* = 7;`: identifier는 아니나, modify가 가능한 lvalue-expressinon
+* L-Value: 메모리 공간을 갖고 있다. 값을 저장할 수 있다.
+* L-Value가 R-Value가 된다.
+    - 변수의 값만 갖고 오는 것이다.
+
+            pt = &var_name
+            int* ptr = arr;
+            pt* = 7;
+
+#### identifier는 아니나, modify가 가능한 lvalue-expressinon
 * `int *ptr2 = arr + 2 * var_name`
     - `arr + 2 * var_name`은 그저 R-Value
 * `*(arr + 2 * var + name) = 456;` 
@@ -61,4 +66,3 @@
 * Identifier는 scope를 갖는다
 * Object는 storage duration을 갖는다.
 * linkage
-
