--- a/12_Memory_Management/12.4_저장_공간의_다섯_가지_분류.md
+++ b/12_Memory_Management/12.4_저장_공간의_다섯_가지_분류.md
@@ -16,7 +16,7 @@
 * 자동 변수와 묶어서 생각하면 편함
 
 ## Static (정적)
-* 프로그램이 시작될 떄 생겨나고 끝날 때까지 머묾.
+* 프로그램이 시작될 때 생겨나고 끝날 때까지 머묾.
 * 메모리에 고정되어 있다는 점에서 고정적이라 할 수 있음.
 * 파일 안 혹은 블록 안에서로 scope를 설정할 수 있음.
 * 번역 단위 내/외부: 컴파일러(파일 단위)와 관련된 용어.
