--- a/12_Memory_Management/12.13_메모리_동적_할당.md
+++ b/12_Memory_Management/12.13_메모리_동적_할당.md
@@ -138,6 +138,6 @@
     - 할당받은 메모리 지우고 (free), 다시 할당받기.
     - 데이터의 길이를 못 바꾸는 것과는 천지차이.
 
-## 가변 길이 배열(VLA)과의 비교
+## [가변 길이 배열(VLA)](https://github.com/uber9ma/following_C/blob/master/10_%EB%B0%B0%EC%97%B4%EA%B3%BC_%ED%8F%AC%EC%9D%B8%ED%84%B0/10.17_%EB%B3%80%EC%88%98%EB%A1%9C_%EA%B8%B8%EC%9D%B4%EB%A5%BC_%EC%A0%95%ED%95%A0_%EC%88%98_%EC%9E%88%EB%8A%94_%EB%B0%B0%EC%97%B4.md)과의 비교
 
 * VLA: automatic duration (stack), cannot be resized
