--- a/12_Memory_Management/12.5_자동_변수.md
+++ b/12_Memory_Management/12.5_자동_변수.md
@@ -2,7 +2,7 @@
 <img src="https://github.com/uber9ma/following_C/blob/master/images/chapter12/scope4.png?raw=true">
 
 * 자동: 지속 기간이 자동적으로 결정된다는 의미.
-    - 프로그렘에서 계속 사용해야 하는 변수가 아니라면 일시적으로 사용하는 것이 좋음.
+    - 프로그램에서 계속 사용해야 하는 변수가 아니라면 일시적으로 사용하는 것이 좋음.
     - 메모리를 효율적으로 사용함.
     - 연결 상태를 유지할 수 없음. (외부로 연결할 수 없음)
         - 있다 없다 하는 것이기 때문에 만들어줄 수 없음.
@@ -62,16 +62,16 @@
             }
 
 
-* `auto`가 없어도 똑같기 떄문에 안 붙임.
+* `auto`가 없어도 똑같기 때문에 안 붙임.
     - `c++`에서 `auto`는 __완전히 다른 의미로__ 쓰임.
 * 자동 변수(지역 변수)들은 초기화를 꼭 해주어야 함.
     - BSS에 들어있는 전역 변수들은 맨 처음에만 초기화해주면 되기에 컴파일러가 초기화해줌.
-    - 그러나 지역 변수들은 스택에 나왔다 들어갔다 하기 때문에, 매번 초기화한다면 컴파일러의 입장에서 많은 비용이 듦.
+    - 그러나 지역 변수들은 스택에 나왔다 들어갔다 하기 때문에, 매번 초기화한다면 컴파일러의 입장에서 많은 비용이 듦. (다른 언어에선 변수 선언만 해도 자동으로 초기화가 되기도 함.)
 * 이름이 같으면 가장 안쪽에 있는 변수를 사용. (name hiding)
     - 물론 메모리는 살아있음. 다만 이름이 겹쳐서 사용 안 함.
 * 더 큰 영역에서 선언됐을 땐 그대로 사용 가능함. (visible)
     - 먼저 선언 => 밑에 깔려 있음. 
-    - 여전히 메모리에 남아 있기 떄문.
+    - 여전히 메모리에 남아 있기 때문.
 * __stack frame__ 은 함수 전체에 필요한 메모리를 말함.
 * __stack__ 은 자료구조 자체.
 * 함수를 부르게 되면 stack frame을 바꿈 (`void func`)
